Se aggo mensaje por defecto cuando no existen cursos aperturados

--- a/client/app/views/matricula/inscripcion-form.html
+++ b/client/app/views/matricula/inscripcion-form.html
@@ -132,6 +132,11 @@
             <tr ng-repeat-end>
 
             </tr>
+            <tr ng-if="!cursoshabilitados">
+              <td colspan="8">
+                No se encontraron cursos aperturados disponibles para el periodo actual
+              </td>
+            </tr>
           </tbody>
         </table>
 
