Modificaciones Archivos-Entrada y Archivos-Salida - Jalcar_20160330

--- a/client/app/views/archivosentrada/list.html
+++ b/client/app/views/archivosentrada/list.html
@@ -26,9 +26,9 @@
 </md-content>
 
 <!-- Button New: solo visible cuando ningun elemento de la lista ha sido seleccionado-->
-<md-button ng-if="!UI.editMode" ng-click="GenerateFile($event)" class="md-fab md-fab-bottom-right" aria-label="{{UI.message.Buttons.GenerateFile}}" >
-  <md-tooltip md-direction="left">{{UI.message.Buttons.GenerateFile}}</md-tooltip>
-  <md-icon md-font-icon="fa fa-cogs fa-lg tc-white"></md-icon>
+<md-button ng-if="!UI.editMode" ng-click="GenerateFile($event)" class="md-fab md-fab-bottom-right" aria-label="{{UI.message.Buttons.UploadFile}}" >
+  <md-tooltip md-direction="left">{{UI.message.Buttons.UploadFile}}</md-tooltip>
+  <md-icon md-font-icon="fa fa-cloud-upload fa-lg tc-white"></md-icon>
 </md-button>
 
 <md-button ng-if="UI.editMode" ng-click="DownloadFile($event)" class="md-fab md-fab-bottom-right" aria-label="{{UI.message.Buttons.Download}}" >
@@ -37,7 +37,7 @@
 </md-button>
 
 <form action="api/compromisopagos/methods/process" method="post">
-  <button id="btnDownloadRecaudo" type="submit" ng-show="false">Generar</button>
+  <button id="btnUploadEntrada" type="submit" ng-show="false">Subir</button>
 </form>
 
 <form action="api/archivobancos/methods/download" method="post">
