--- a/client/app/views/aprobacion/cursos/form-grupo.html
+++ b/client/app/views/aprobacion/cursos/form-grupo.html
@@ -10,8 +10,26 @@
       </div>
     </md-toolbar>
 
-    <md-dialog-content class="window-modal-content-sm">
-        <div flex  layout="row" layout-sm="column">
+    <md-dialog-content class="window-modal-content-sm md-padding">
+        <div flex  layout="column" layout-sm="column">
+          <div flex>
+            <md-input-container class="md-block">
+              <label>Grupo</label>
+
+              <md-select ng-model="model._seccion" ng-model-options="{trackBy: '$value._id'}">
+               <md-option ng-repeat="seccion in secciones" ng-value="seccion" >
+                 {{seccion.nombre}}
+               </md-option>
+             </md-select>
+            <div ng-messages="myForm.codigo.$error"  ng-if="submited">
+                  <div ng-message="required">{{message.Required}}</div>
+                  <div ng-message="validateUnique">{{message.validateUnique}}</div>
+                </div>
+                <div ng-if="ValidationError['codigo'].kind" >
+                  {{ValidationError['codigo'].message}}
+                </div>
+          </md-input-container>
+          </div>
                <div flex>
                    <md-input-container class="md-block">
                      <label>Cupos</label>
@@ -25,32 +43,13 @@
                      </div>
                    </md-input-container>
                </div>
-               <div flex>
-                 <md-input-container class="md-block">
-                   <label>Grupo</label>
 
-                   <md-select ng-model="model._seccion" ng-model-options="{trackBy: '$value._id'}">
-                    <md-option ng-repeat="seccion in secciones" ng-value="seccion" >
-                      {{seccion.nombre}}
-                    </md-option>
-                  </md-select>
-                 <div ng-messages="myForm.codigo.$error"  ng-if="submited">
-                       <div ng-message="required">{{message.Required}}</div>
-                       <div ng-message="validateUnique">{{message.validateUnique}}</div>
-                     </div>
-                     <div ng-if="ValidationError['codigo'].kind" >
-                       {{ValidationError['codigo'].message}}
-                     </div>
-               </md-input-container>
-               </div>
            </div>
-           <div  flex  layout="row" layout-sm="column">
-            <div flex="70" layout="row"  layout-align="end center" flex-sm="100">
-              <md-button class="md-raised" ng-click="Cancel()">{{Buttons.Cancel}}</md-button>
-              <md-button class="md-raised md-primary" ng-click="Save(myForm)">{{Buttons.Save}}</md-button>
-            </div>
-          </div>
-    </md-dialog-content>
 
+    </md-dialog-content>
+<md-dialog-actions layout="row">
+  <md-button class="md-raised" ng-click="Cancel()">{{Buttons.Cancel}}</md-button>
+  <md-button class="md-raised md-primary" ng-click="Save(myForm)">{{Buttons.Save}}</md-button>
+</md-dialog-actions>
   </form>
 </md-dialog>
