--- a/client/app/views/aprobacion/cursos/list-grupo.html
+++ b/client/app/views/aprobacion/cursos/list-grupo.html
@@ -94,7 +94,7 @@
               <td>
               </td>
               <td colspan="8">
-                <md-button style="width:100%;text-align:left;margin:0;" ng-click="Edit($event)">
+                <md-button style="width:100%;text-align:left;margin:0;" ng-click="Edit($event,grupo)">
                  <md-icon md-font-icon="fa fa-cubes"></md-icon> {{grupo._seccion.nombre}}
                </md-button>
 
