--- a/client/app/views/matricula/inscripcion.html
+++ b/client/app/views/matricula/inscripcion.html
@@ -11,7 +11,7 @@
         <div class="md-primary md-12-line">
           <md-list layout="column" layout-padding>
             <md-list-item>
-              <img ng-src="{{ ALUMNO.imagen }}" class="md-avatar">
+              <img ng-src="/images/{{ALUMNO._persona.sexo}}.jpg" class="md-avatar">
               <div class="md-list-item-text">
                 <h3>{{ ALUMNO._persona.nombres }} {{ ALUMNO._persona.apellidoPaterno }} {{ ALUMNO._persona.apellidoMaterno }}</h3>
                 <p>{{ ALUMNO.codigo }}</p>
@@ -36,13 +36,13 @@
             <div flex>
               <md-input-container class="md-block" >
                 <label>Facultad</label>
-                <input required name="codigo" ng-model="ALUMNO._escuela._facultad.nombre" ng-readonly="checked">
+                <input required name="codigo" ng-model="ALUMNO._escuela._facultad.nombre" ng-readonly="true">
               </md-input-container>
             </div>
             <div flex>
               <md-input-container class="md-block">
                 <label>Escuela</label>
-                <input required name="codigo" ng-model="ALUMNO._escuela.nombre" ng-readonly="checked">
+                <input required name="codigo" ng-model="ALUMNO._escuela.nombre" ng-readonly="true">
               </md-input-container>
             </div>
           </div>
