Validacion matricula incorporada

--- a/client/app/views/blocks/app_sidenav.html
+++ b/client/app/views/blocks/app_sidenav.html
@@ -11,7 +11,7 @@
 <md-content layout-padding class="bgc-{{color.primary}}-500">
 
 <div layout="column" layout-align="center center" style="height:160px;">
-  <div layout-align="center start"  layout-padding>
+  <div layout-align="center start"  >
     <img src="/images/logo.jpg" width="100" height="100" class="img-round user-logo-main">
   </div>
 
