--- a/client/app/views/home/home_alumno.html
+++ b/client/app/views/home/home_alumno.html
@@ -34,7 +34,7 @@
       </div>
 
       <div class="dashboard display-animation" flex="33" flex-sm="100" ng-if="aproved">
-        <a class="tile tile-lg bgc-teal-500 ripple-effect tc-white-1  " ui-sref="app.planestudios">
+        <a class="tile tile-lg bgc-teal-500 ripple-effect tc-white-1  " >
           <span class="content-wrapper">
               <span class="tile-content">
                 <span class="tile-img" style="background-image: url(images/bghome-2.jpg);background-size:cover;"></span>
