Se corrigio nombre de imag y se oculto opciones login

--- a/client/app/views/login.html
+++ b/client/app/views/login.html
@@ -15,8 +15,8 @@
         <p>
             <!--md-button ng-href="/#/getCode">Obtener código universitario</md-button>
             <md-button ng-href="/#/recoverPass">Recuperar contraseña</md-button-->
-            <a href="/#/getCode">Obtener código universitario</a><br/>
-            <a href="/#/recoverPass">Recuperar contraseña</a>
+            <!--a href="/#/getCode">Obtener código universitario</a><br/>
+            <a href="/#/recoverPass">Recuperar contraseña</a-->
         </p>
         <br>
         <md-button type="submit" class="md-raised md-warn tc-white" aria-label="Entrar" style="float:right;">
