--- a/client/app/views/matricula/revision-last.html
+++ b/client/app/views/matricula/revision-last.html
@@ -309,13 +309,15 @@
 
         <p ng-if="!print">
           Para finalizar su matrícula deberá realizar el abono respectivo dentro de las siguientes
-          <strong>48:00 horas</strong> a traves de cualquier canal de atención del BBVA Banco Continental al siguiente numero de cuenta
-          <strong>458-789845-0-53</strong> a nombre de
+          <strong>48:00 horas</strong> a traves de cualquier canal de atención del BBVA Banco Continental indicando el concepto
+          <strong>PAGO DE RECAUDACIÓN</strong> a nombre de
           <strong>Universidad Nacional de Ucayali</strong> por importe/concepto de:
         </p>
 
         <p ng-if="!print">
-          Pasadas las HH horas y no habiéndose realizado el pago indicado, su Matrícula quedará sin efecto perdiendo los cupos guardados en los cursos seleccionados.
+          Pasadas las 48:00 horas y no habiéndose realizado el pago indicado, su Matrícula quedará sin efecto perdiendo los cupos guardados en los cursos seleccionados.<br>
+          - Para los alumnos que realizaron su pre-matricula el dia 11/04/2016 tendran opcion a realizar su pago desde el 12/04/2016 hasta el 13/04/2016<br>
+          - Para los alumnos que realizaron su pre-matricula el dia 12/04/2016 solo podran realizar su pago el día 13/04/2016<br>
         </p>
       </md-content>
 
