--- a/client/app/views/login.html
+++ b/client/app/views/login.html
@@ -13,8 +13,8 @@
         </lx-text-field>
         <br>
         <p>
-            <!--md-button ng-href="/#/getCode">Obtener código universitario</md-button>
-            <md-button ng-href="/#/recoverPass">Recuperar contraseña</md-button-->
+            <md-button>Obtener código universitario</md-button>
+            <md-button>Recuperar contraseña</md-button>
             <!--a href="/#/getCode">Obtener código universitario</a><br/>
             <a href="/#/recoverPass">Recuperar contraseña</a-->
         </p>
