--- a/client/app/views/login.html
+++ b/client/app/views/login.html
@@ -13,10 +13,10 @@
         </lx-text-field>
         <br>
         <p>
-            <md-button>Obtener código universitario</md-button>
-            <md-button>Recuperar contraseña</md-button>
-            <!--a href="/#/getCode">Obtener código universitario</a><br/>
-            <a href="/#/recoverPass">Recuperar contraseña</a-->
+            <!--md-button ng-href="/#/getCode">Obtener código universitario</md-button>
+            <md-button ng-href="/#/recoverPass">Recuperar contraseña</md-button-->
+            <a href>Obtener código universitario</a><br/>
+            <a href>Recuperar contraseña</a>
         </p>
         <br>
         <md-button type="submit" class="md-raised md-warn tc-white" aria-label="Entrar" style="float:right;">
